# tetris_core

./: Cargo.toml  README.md
src/: active_figure.rs  board.rs  game.rs  lib.rs  move_validator.rs
src/figure/: figure.rs  figure_type.rs  matrix.rs  mod.rs
src/figure/utilities/: block.rs  direction.rs  geometry.rs  graphics.rs  mod.rs
